modified:art work_1_1

--- a/_posts/2018-11-14-Art-Work.md
+++ b/_posts/2018-11-14-Art-Work.md
@@ -8,73 +8,49 @@ keywords: Android, Emulator, TCP
 
 陶瓷材料大多是氧化物、氮化物、硼化物和碳化物等。常见的陶瓷材料有粘土、氧化铝、高岭土等。陶瓷材料一般硬度较高，但可塑性较差。除了在食器、装饰的使用上，在科学、技术的发展中亦扮演重要角色。陶瓷原料是地球原有的大量资源黏土经过淬取而成。而粘土的性质具韧性，常温遇水可塑，微干可雕，全干可磨;烧至700度可成陶器能装水;烧至1230度则瓷化，可完全不吸水且耐高温耐腐蚀。其用法之弹性，在今日文化科技中尚有各种创意的应用。
 
+## 历史简介
+
 中国陶瓷是陶器和瓷器的总称。中国人早在约公元前8000-2000年(新石器时代)就发明了陶器。
+从现有的考古资料来看，断定中国原始陶器开始于距今七千年左右是不成问题的。最早的彩陶发源地在黄河流域，龙其以陕西的泾河、渭河以及甘肃东部比较集中。甘肃东部大地湾一期文化，不仅在器形上比较规整，而且绘有简单的纹饰，是世界上最早出现的彩陶文化之一。这一时期已出现陶轮技术，制陶术已成为一种专门技术。半坡文化的彩陶在略晚于大地湾一期文化，其纹饰也略为复杂，以几何纹样为主。在陕西、河南、山西三省交界地区为中心的庙底沟文化，彩陶花纹则更加富于变化，以弧线和动感强烈的斜线体现变形的动物形象。日常生活中所常见的鱼、鸟、猪以及人类自身都被作为装饰纹样。这些纹饰的描绘手法都很生动，布局合理，是原始绘画的佳作，也是研究中国绘画史的可靠形象资料。 
+　　　　距今约四千年左右的马家窑文化，是由半坡文化派生发展的古羌集团的一个分支。与之相关的另外两个支系是半山文化和马厂文化，是龙山文化之后的又一个辉煌时期。马家窑文化类型的陶瓷，表面都经过打磨外理，器表光滑匀称，以黑色单彩加以装饰。装饰图案以满见长，在钵、盘、碗一类的敞口器物内侧，也都绘有图案。 
+　　　　上古之民，穴居野处，生活中的工作中心都围绕着渔猎饮食，所以最初迫切的发明需要都釜瓮之类。陶瓷上出现装饰，说明人类的生产力水平大有进步，解决果腹问题以外，尚有余力，于是人们开始在满足最低需求之外，追求美的表现。 
+　　　　河西走廊一带的马厂类型彩陶，器形一般较小，有的器皿上留有穿系小孔，便于携带反映出这一地区半农半牧的经济状况。而在半山彩陶瓷上则出现了播撒种子的人形图案，说明农业的发展和人们创造力的进步。 
+　　　　在原始社会，文字尚未完善成熟。图案形象直观性强，在当时具有标志性、装饰性等性能，所以对彩陶图案的研究也会给古文字研究提供佐证。中国自古是一个多民族聚居的国家，在原始时期，氏族部落更为繁杂，在特定的生产条件下形成了独特的审美需求的文化特徵，它们各自有着代表氏族文化的标志性形象，也产生着不可低估的精神凝聚力量。而随着氏族文化盛衰变化，陶器装饰也出现了不同的内容的形式。 
+　　　 纵观中国彩陶的技术与艺术，历时四千八年。其实它的上限年代还是个难以考据的迷，随考古发掘工八的不断进行，可能还会出现不同的新认识。就目前现有的资料而言，可以说原始陶器不仅是我国古代艺术的瑰宝，它在世界文化艺术史上也占有重要的一席之地，它是全人类的宝贵文化遗产，是人类文明史上无比辉煌的一章。
+　　
+## 商、周时期 
+　　
+　　　　大约在距今四千多年之前，农业生产的发展不断进步，私有制开始出现萌芽，原始氏族部落的社会形式已不能适应新的要求。当时长期定居在中原一带的夏部族，通过联合其他部族形成了由夏王朝统治的奴隶制国家。这可以说是我国历史上第一个朝代，地下考古发堀实物可以印证，在商代之前而存在的夏代是一个历史史实而非传说。加之后来的商代、西周和东周（包括春秋、战国），被统治为“夏、商、周时代＂，其间约二千年左右。这一时期的社会形态由原始氏族部落发展为奴隶社会，也成为由奴隶社会向封建社会变革的转型时期。其时，各种手工业渐进渐繁，开始有分工制度，制陶业已成为独立的手工业部门，而且是诸工种中最重要的一种。 
+　　　　夏、商、周三代的陶瓷品种，大致可分为灰陶、白陶、印纹陶、红陶、原始陶等。其中在日常生活中使用最多的是灰陶，有素面，也人施以简单的绳纹或篮纹，或者彩绘各种复杂图案的；还有在制作胎体过程中用拍、印、刻、堆、划等手法留取肌理效果。这一时期的器体造型功能依然以饮食器皿为主，有豆、鼎、釜、鬲、觚、 等等。白陶在新石器晚期就已出现，这一时期又有了进一步发展。白陶所使用的原材料为瓷土，质地较细密，烧成温度也比其他陶器品种要高。其造型与装饰直接受到同时期青铜礼器的影响，艺术价值不在青铜器之下。 
+　　　　通过长期烧造白陶和印纹硬陶的实践，不断改进才原材料的选择与加工，至少于商代中期出现了原始瓷器，到西周、春秋、战国时期开始兴盛起来。胎质烧结程度提高和器表施釉，使原始瓷器不吸水而且更加美观。原始瓷器一般都在施釉前在坯体上拍制几何图案，釉色多呈现青绿、青黄色。 
+　　　　夏代人们的活动区域主要在中原一带，据考古发现可断定在河南豫西与山西晋南地区。商代的统治范围有所扩大，因此，在陶瓷工艺上也大量融合了中原以外地区的特徵，制陶业从其他农业分工中独立出来。西周在北至北京、南至广东、东抵海滨、西达陕、甘的广大地区，原始瓷器蓬勃发展起来。春秋战国时期在长江中、下游地区出现了大量公、私制陶作坊，其产品上多留有文字铭记，据推测可能与制造者或使用者有关，另外，这一时期的大量彩绘陶深受同时期漆器的影响。 
+　　　　夏、商、周时代的烧窑技术也有所改进，馒头窑的出现更加改善了窑内的烧成气氛，对提高陶器品质有利。窑炉容积增大，窑室底部可达1.8米；根据不同产品，烧成温度也有所提高。进入西周以后，窑炉顶部出现了烟囱，这对陶瓷烧造技术的改良有着重大意义。这个创举，使燃料的燃烧更加充分，热力更有效利用，还可调节空气和火焰的流速，使火焰性质得以控制，烧成温度可达1200oC。所以说，窑炉的改进，是这一时期出现原始瓷器的重要原因。
+　　
+##　秦、汉时期 
+　　
+　　　　秦赢政13岁继王位，后兼并六国，一统天下，始称皇帝。将以往各藩王制度废弃，分天下为郡县，但至二世胡亥，各处大乱，刘邦起事，破秦灭楚，立国为汉。 
+　　　　秦始皇于即位之初便倾天下之力大兴土木，建造大规模的阿旁宫和陵园。所以，砖、瓦等建材和宫殿内所需陶瓷器皿大量烧造。1974年在秦始皇陵东侧出土的大量与真人等大的陶制兵马俑，就是秦始皇陵墓陪葬品的一部分。从已发掘的三个俑坑情况可以看出当时的烧陶水平，数量巨大，仅仅挖出一个角落，就有千万之巨；制作精湛，神态各异，造型生动；工艺成熟，如此巨大的作品，几乎没有变形、开裂的问题，原材料使用当地泥土，凝结性、可塑性强。这一时期的窑炉建设，为适应大量烧制建筑用陶和象兵马俑那样的大型物件，使窑室规模增大，普遍增加了一至三倍。窑炉所设烟囱多已移到后部。特别值得一提的是，这一时期出现了窑床前高后底（约为7o坡度）的特殊设计，是一项创造性改革，使窑室内温度不均的问题得以改善。 
+　　　　汉代是中国陶瓷历史上的一个重要转捩点。所制器物的表面被广泛施釉，有学者认为是受罗马及欧洲人制造琉璃技术的影响，国为当时的人们与上述地区有着密切的贸易往来。 
+　　　　汉代人重视墓葬，成为习俗，殉葬品力求丰富而精细，被称为“明器＂，它与祭器之别在于它是专门供死者在阴间所用而非为生者用具。陪葬品中除少量石质品、金属制品、木质漆器以外，被大量使用的为陶制品，因为这种材质可历千年而不腐败。除饮食所用的器皿外，大量摹拟生活场景，加以缩微，如陶制的楼阁、仓房、灶台、兽圈、车马、井台、奴仆等等，营造虚幻环境供死者享用。明器当中的壶、尊、盆、罐之类器皿，一般都在素坯之外敷设一层粉彩，并不与胎体相融，稍摩擦便脱落；小型生活场景模型，外表都施加绿色低温铅釉，这种铅釉有毒性已被当时人们所知晓，所以在日常生活用品中并不使用。对陵墓的重视，使这一时期出现了一种特殊建材 “圹砖＂。“圹＂就是指墓穴，圹砖体积较大，内部为空心，外表饰有图案，可连续排列，也可独立成为画面。砖面图案是模具拓印而成的，这是后世陶瓷器表面印花工艺的雏形。此外，在汉代陶器当中，瓦当的艺术成就也非常突出。 
+　　　　汉代的陶瓷器，造型浑厚而饱满，许多器形模仿铜器造型。器物表面施釉烧成温度约在950oC1000oC之间，为低温釉，所以今天所见到的汉器表面出现有细微碎纹。到汉代为止，我国北方使用的馒头窑已基本达到比较完善的地步。在南方，此时已出现比较成熟的龙窑，增大窑室的同时也缩短了烧成时间。
+　　
+## 魏、晋、南北朝时代 
+　　　　三国、两晋、南北朝是从公元 200年至581年。公元200年曹丕废了汉献帝自立为王，国号“魏＂；第二年刘备在四川建立蜀汉政权；公元229年，孙权在建业（现南京称帝，国号“吴＂，史称“三国＂。 
+　　　　从公元263年魏灭蜀以后，连年战乱，北方出现了五胡十六国的局面。西晋灭亡之后。许多门阀士族渡江南下，先后建立了宋、齐、梁、陈四个朝代，史称“南朝＂，与同时代北方的北朝统称“南北朝＂。 
+　　　　三国、两晋时期，江南陶瓷业发展迅速，相继在萧山、上虞、余姚一带出现了越窑、瓯窑、婺窑等着名窑址。所制器物注重品质，加工精细，可与金、银器相媲美，成为当时名门望族的日用品。 　　东晋南朝时期，在江西、四川、福建等地的窑址有了很大发展。但江浙一带的瓷窑都出现了明显的衰退迹象、瓷窑减少、数量降低、装饰简化、烧造略显粗糙。这种局面一直持续至唐代前期。 
+　　　　相对而言，我国北方生产瓷器的年代略晚。这一时代的动乱局面使中原一带遭受严重破坏，在这以前，关中、中原地区曾是中国的政治、文化、经济中心。陶瓷业的衰退也就在所难免，制瓷业的出现一直拖至了北朝时期。但这一时期却令人惊喜地出现了一种独特的、而且对后世有深远意义的陶瓷品种，这就是白瓷。
+　　 　　在我国，众所公认的、真正意义上的瓷器之出现当在东汉时期。它的坯体由高岭土或瓷石等复和材料制成，在1200oC1300oC的高温中烧制而成，胎体要求坚硬、致密、细薄而不吸水，胎体外面罩施一层釉，釉面要光洁、顺滑、不脱落、剥离。长江中下游的广大地区具有丰富的原材料资源，又富有燃料资源，所以这一地区的制陶业发展很快，出现了众多而且面广的窑址。瓷器的产地俗称“窑口＂，是由考古工作者根据古代文献记载或实地发掘所逐步了解的。通过实地调查与发掘，基本上弄清了这一时期的一些主要窑口。比如越窑，又称“越州窑＂，从东汉时期开创，至北宋衰落。其基本分部在浙江宁波、余姚、绍兴、萧山一带。其主要特点是：胎质细密、呈青灰色；釉质莹润，具有玉质感，釉色深绿，色泽纯正，坯釉结合紧密。唐代诗人陆龟蒙写诗赞扬“九秋风露越窑开，夺得千峰翠色来＂。瓯窑，在温州一带。其特点是：胎质白中泛灰，釉层较薄，釉色淡青，透明度高，有细小开片，易脱落。再如江西的洪州窑、湖南的岳州窑、江苏宜兴窑等等。
+　　 　　这一时期的瓷器已取代了一部分陶器、铜器、漆器，成为人们日常生活最主要的生活用具之一，被广泛用于餐饮、陈设、文房用具、丧葬冥器等等。 
+　　　　中国人饮茶习惯当起于东周时的四川一带，东汉时饮茶之风传至长江下游，此风蔓延迅速，至东晋时，已成为王室豪门的时尚。据古籍的记载，当时的茶饮方式方法与今日大不相同，所以需要一些形制不同的器具，数量上也有很大需求。经研究考证，当时造型独特的鸡头壶就是一种茶具，这种造型延至隋唐以后就不再有了。
+　　 　　瓷质谷仓罐是三国西晋时期出现的，它用于陪葬品，所以也称“魂瓶＂或“神亭＂，是由东汉的五联罐发展而来。这一时期的谷仓罐制作精细，堆塑繁杂，有人物、飞禽、走兽、亭台，粮食一直被视为人生第一重要之物资，所以从秦汉时代就开始给死者陪葬粮食，以供死者在阴间享用，同时，陪葬品中还含有整套粮食加工工具和做饭用的炊具，以体现吃饭的重要性。 　　南北朝时期佛教盛兴，各地都建造了大量寺庙、佛像石窑，僧尼数量猛增，带有佛教色彩、意义的装饰随处可见。如在建筑装饰上带有飞天、莲花等标志性图案。体现在陶瓷器上，最有代表性的是“莲花尊＂。 
+　　　　陶瓷还被大量运用到文具中，如笔筒、水盂、砚等。水盂的功能只是盛磨墨用水的，但造型都很丰富，有蛙形、鸟形、兔形、牛形等样式。陶瓷文具被广泛使用，与这一时期崇尚读书、推崇士儒有关联。 
+　　　　这一时期的装饰特点比较明显，尤其是三国西晋时期的越窑最为突出。器物上常有表现生活场景的纹样，刻画细腻且逼真，真实地反映了那一个时期的社会面貌，也给今人研究建筑、音东、舞蹈、宗教、蓄牧等方面的课题提供佐证。一些生活用品如虎子、烛台、油灯、水盂上大胆使用夸张变形的动物形象，多方面地体现了当时社会的审美意识，丰富了人们的精神生活。 　　缥色是魏晋南北朝时期的特色釉，是青瓷系统的代表，与北方地区的白瓷交相辉映。之外，常用褐彩打破单一的青釉，使之更加活泼。这种装饰方法简单易行，适应面广，效果较好，所以被广泛使用。用褐彩在器物表面上书写文字，是褐彩装饰的另一特色，这种装饰手法在后来的唐、五代时期大为盛兴。其字体形式为书法研究提供了可靠资料。
+　　 　　当今所见的越窑晋瓷，工艺多为上乘，釉色高古，质地醇素，极具品味。由于当时的工艺水平，所生产出的陶瓷在釉色上发生很丰富的变化，青色中有偏绿的、偏黄或偏灰的，与釉料成份、烧成火焰都有很大关系。尽管现时的技术力量更加强大，但今人的仿制品都往往是千篇一律，死气沉沉，失却了古人的迹象。瓷釉的调制也是重要因素。青瓷釉最初是用瓷石与草木灰混制而成，风化程度差的瓷石一般含有大量助熔剂，常用来做釉，草木灰的作用是引入CaO成份，经过高温烧制与瓷石相互作用形成钙质釉。青瓷自东汉晚期出现以后，经过三国、两晋、南北朝，在坯、釉品质上产生了不同程度的提高，但由于瓷石原料分布地域广泛，原料成份含量多有不同，所以这一时期的瓷器釉色和质感有较大差异。 
+　　　　由于南方广大地区战乱较少，社会秩序也就比较安全，中原地区大批员纷纷南下，其中也不乏陶瓷业技工。而北方地区处于萧条境地，陶瓷业还不及汉代发达，对窑炉的使用也极少改进，仍延用圆形馒头窑。在南方，窑炉有了很大发展，龙窑结构被进一步改良。窑床长度达十余米，为解决龙窑窑室内抽力大、火焰速度过快的问题，这一时期发明了起缓解作用的“挡火墙＂，可更有效地调节窑内抽力和温度。经测试，这一时期的瓷器都是在弱还原焰中烧成，烧结程度较好，烧成温度可达1300度左右，达到了现代瓷的品质水平，这无疑是与龙窑结构的改进和烧成技术的提高密不可分。
 
 ## 陶瓷图片欣赏
 
 <img src="http://image.so.com/v?src=360pic_normal&z=1&i=0&cmg=b7b9ddf76d1be761a26872c868c3fff5&q=%E4%B8%AD%E5%9B%BD%E9%99%B6%E7%93%B7&correct=%E4%B8%AD%E5%9B%BD%E9%99%B6%E7%93%B7&cmsid=4fa9f2e0ff72aa3bc9d0fcf3b8340194&cmran=0&cmras=0&cn=0&gn=0&kn=0#multiple=0&gsrc=1&dataindex=3&id=a9ffeaa79a7efbec9441a6ddec01e76c&currsn=0&jdx=3&fsn=60"/>
-
-## 实现两台模拟器之间的通信
-
-现在来解决标题和文首提到的问题，主要用到了网络重定向。
-
-假设开发环境是：
-
-* PC 是指运行模拟器的宿主电脑
-
-* emulator-5554 是模拟器 1，将在 TCP 通信中作为 server 端
-
-* emulator-5556 是模拟器 2，将在 TCP 通信中作为 client 端
-
-配置步骤：
-
-1. 在 emulator-5554 上运行 server，侦听 10.0.2.15:58080
-
-2. 在 PC 上运行 `cat ~/.emulator_console_auth_token`，得到一个 token
-
-3. 在 PC 上运行
-
-    ```sh
-    telnet localhost 5554
-    auth <token>
-    redir add tcp:51212:58080
-    ```
-
-    `<token>` 是指第 2 步中得到的 token。
-
-    51212 是 PC 端口，58080 是 5554 模拟器的端口。
-
-4. 在 emulator-5556 上运行 client 程序，连接 10.0.2.2:51212
-
-至此，两台模拟器之间已经可以通过 TCP 愉快地通信了。
-
-它们之间的网络连接和通信示意图如下：
-
-![](/images/posts/android/emulators-communication.png)
-
-**注：** 
-
-* 以上步骤中用到的端口号都是可以根据你的需求替换的
-
-* Windows 下 telnet 命令默认没有启用，具体启用方法请搜狗一下
-
-## 模拟器的网络限制
-
-1. 模拟器上运行的 Apps 可以连接到宿主电脑上的网络，但这是通过模拟器间接实现，不是直接连到宿主电脑的网卡。模拟器可以看作是宿主电脑上运行的一个普通程序。
-
-2. 因为模拟器的特殊网络配置，可能无法支持一些网络协议，比如 ping 命令使用的 ICMP 协议。目前，模拟器不支持 IGMP 和 multicast。
-
-    *试验了一下，模拟器的 shell 里 `ping www.sogou.com` 一直卡在那，在手机的 shell 里就可以。*
-
-## 额外的发现
-
-在阅读 Android 官方文档里关于模拟器的章节时，意外地发现有一节 [Sending a voice call or SMS to another emulator instance][2]
-
-就是说模拟器可以给另外的模拟器打电话和发短信，电话号码就是端口号，比如 emulator-5554 模拟器，电话号码就是 5554，这个号码也可以从模拟器的窗口标题栏上找到，比如 `Android Emulator - Nexus_5X_API_19:5554`，里面那个 5554 就是。
-
-## 后话
-
-天下博文，大部分都逃不出官方文档与公开源码的范畴（比如本文就是），而且都是选定文档里讲的某一小部分来进行讲解演绎，这在作为扩展视野、快速上手、快速解决问题等用途时还是比较实用的，但如果想系统、全面地学习，官方文档一般是更好的选择。
 
 [1]: https://developer.android.com/studio/run/emulator-networking.html#connecting
 [2]: https://developer.android.com/studio/run/emulator-networking.html#calling
