modified:art work_1_4>label

--- a/_posts/2018-11-14-Art-Work.md
+++ b/_posts/2018-11-14-Art-Work.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 中国陶瓷资料总集
-categories: Android
+categories: Art Work
 description: 中国陶瓷资料总集
 keywords: Art Work, Emulator, TCP
 ---
